# learning

./: .gitignore  CMakeLists.txt  build.sh  effective.cpp
C++/: CMakeLists.txt  StrBlob.cpp  StrBlob.h  StrVec.h  allocate.cpp  dangling_pointer.cpp  file.cpp  file.h  friendTemplate.cpp  impunique_ptr.hpp  includes.h  move.cpp  myUniqePtr.cpp  myshared_ptr.cpp  pthread_once_example.cpp  singleton.cpp  singleton.hpp  strings.cpp  testMessage.cpp  testTemlate.cpp  test_singleton.cpp  unique_ptr_test.cpp
C++/TextSearch/: CMakeLists.txt  Query_result.hpp  TextQuery.hpp  main.cpp  query.cpp  query.hpp
C++/Training/: CMakeLists.txt  Myset.cpp  draw.cpp
C++/Training/2_Basic_OO_Design_Principles/: CMakeLists.txt  LSP.cpp  OCP.cpp
C++/Training/3_Concepts_and_STL/: Accumulate.cpp  BadCopy.cpp  BadTransform.cpp  CMakeLists.txt  IsPunct.cpp  Table.cpp
C++/Training/4_Class_Design/: CMakeLists.txt  Complex.cpp  ConstCorrectness.cpp  DesignByContract.cpp  Remote.cpp  Visibility1.docx
C++/Training/5_Exception_Safety/: CMakeLists.txt  LockGuard.cpp  Remote.cpp
C++/Training/6_Proper_Use_of_Dynamic_Polymorphism/: CMakeLists.txt  SiameseTwins.cpp
C++/Training/7_Dependency_Breaking_Techniques/: CMakeLists.txt  ConcreteObserver.cpp  Includes1.h  Includes2.h  Includes3.h
C++/Training/8_Non-Intrusive-Design/: CMakeLists.txt  DrawAllShapes.cpp
C++/Training/B_Test_Driven_Class_Design/: CMakeLists.txt  Curl.cpp
C++/Training/C++11_14/: CMakeLists.txt  Factory.cpp  Faculty.cpp  Observer.cpp  Simpsons.cpp  UniquePtr.cpp
C++/Training/C_Templates/: CMakeLists.txt  Max.cpp
algorithm/: CMakeLists.txt  convertToletter.cpp  dp_nonzeromartix.cpp
network/: CMakeLists.txt  client.c  common.h  msgclient.c  msgserv.c  server.c
os/: CMakeLists.txt  producer_consumer.cpp
