#=============================================================================
# Copyright (c) 2013 Elektrobit. All rights reserved.
# This file is part of the Elektrobit C++ Training.
#=============================================================================

add_executable(SiameseTwins
  SiameseTwins.cpp
  )

set_target_properties(SiameseTwins PROPERTIES
  FOLDER "6_Proper_Use_of_Dynamic_Polymorphism"
  )
