#=============================================================================
# Copyright (c) 2013 Elektrobit. All rights reserved.
# This file is part of the Elektrobit C++ Training.
#=============================================================================

add_executable(Max
  Max.cpp
  )

set_target_properties(Max PROPERTIES
  FOLDER "C_Templates"
  )
